CMakeLists: fix switch build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -389,6 +389,12 @@ if(NOT SERVER_ONLY)
         include_directories(BEFORE "${PROJECT_SOURCE_DIR}/lib/mojoal")
     else()
         find_package(OpenAL REQUIRED)
+        if (NOT OPENAL_LIBRARY)
+            find_library(OPENAL_LIBRARY NAMES al OpenAL AL openal REQUIRED)
+        endif()
+        if (NOT OPENAL_INCLUDE_DIR)
+            find_path(OPENAL_INCLUDE_DIR NAMES AL/al.h REQUIRED)
+        endif()
         include_directories(${OPENAL_INCLUDE_DIR})
     endif()
 
