--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -41,9 +41,9 @@ jobs:
           echo "unzip=unzip" >> $GITHUB_ENV
       - name: Restore timestamps
         run: |
-          ${{ env.wget }} https://github.com/MestreLion/git-tools/archive/refs/heads/master.zip
-          ${{ env.unzip }} master.zip
-          python git-tools-master/git-restore-mtime
+          ${{ env.wget }} https://github.com/MestreLion/git-tools/archive/refs/heads/main.zip
+          ${{ env.unzip }} main.zip
+          python git-tools-main/git-restore-mtime
       - name: List build cache restore keys
         shell : bash
         run: |
