--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -25,7 +25,10 @@ set(GE_SOURCES
     src/ge_main.cpp
     src/ge_texture.cpp
     src/ge_dx9_texture.cpp
+    src/ge_vulkan_2d_renderer.cpp
     src/ge_vulkan_driver.cpp
+    src/ge_vulkan_dynamic_buffer.cpp
+    src/ge_vulkan_features.cpp
     src/ge_vulkan_shader_manager.cpp
     src/ge_vulkan_texture.cpp
     src/ge_gl_texture.cpp
