Fix compiler warnings in MinGW

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -375,7 +375,7 @@ if(USE_WIIUSE)
         if(WIIUSE_BUILD)
             add_subdirectory("${PROJECT_SOURCE_DIR}/lib/wiiuse")
         endif()
-        include_directories(BEFORE "${PROJECT_SOURCE_DIR}/lib/wiiuse/src")
+        include_directories(BEFORE "${PROJECT_SOURCE_DIR}/lib/wiiuse/src/include")
         set(WIIUSE_LIBRARIES "wiiuse" "bluetooth")
     endif()
 endif()
