Update translation source, AppData and Desktop file

--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -10,6 +10,7 @@ GenericName[cs]=3D open source závodní hra motokár
 GenericName[da]=Et 3D-kartracerspil i open source
 GenericName[de]=Ein Open-Source 3D-Kart-Rennspiel
 GenericName[el]=Ενα 3D ανοιχτού κώδικα παιχνίδι  αγώνων με κάρτ 
+GenericName[eo]=3D-a malfermitkoda karta vetkurad-ludo
 GenericName[es]=Un juego de carreras de karts en 3D de código abierto.
 GenericName[eu]=Kart lasterketetako 3D jolas librea
 GenericName[fi]=Avoimen lähdekoodin kolmiulotteinen kilpa-ajopeli
@@ -26,10 +27,12 @@ GenericName[nl]=Een open source 3D kartracespel
 GenericName[nn]=Eit racerspel i 3D med open kjeldekode
 GenericName[pl]=Trójwymiarowe wyścigi gokartów open-source
 GenericName[pt]=Um jogo 3D de karting com mascotes de aplicativos open source.
-GenericName[pt_BR]=Um jogo de corrida de kart 3D de código aberto
+GenericName[pt_BR]=Corridas de kart em 3D e código aberto
 GenericName[ru]=Свободная трёхмерная гоночная игра на картах
+GenericName[sk]=3D open-source závodná hra v štýle arkády
 GenericName[sr]=Игра тркања колицима слободног кода
 GenericName[sv]=Ett 3D-racingspel med öppen källkod
+GenericName[th]=เกมแข่งรถโอเพ่นซอร์ส 3 มิติ
 GenericName[tr]=3D açık kaynaklı kart yarış oyunu
 GenericName[zh_CN]=一个三维开源赛车游戏
 GenericName[zh_HK]=3D 開源卡丁車賽車遊戲
@@ -49,11 +52,13 @@ Keywords[cs]=tux;hra;závod;
 Keywords[da]=tux;spil;racerløb;
 Keywords[de]=tux;spiel;rennen;
 Keywords[el]=tux;παιχνίδι;αγώνας;
+Keywords[eo]=tukso;ludo;vetkuro;
 Keywords[es]=tux;juego;carreras;
 Keywords[fi]=tux;game;race;peli;ralli;kilpa-ajo;autopeli;
 Keywords[fr]=tux;jeu;course;
 Keywords[gd]=tux;game;race;geama;rèis;rèiseadh;
 Keywords[he]=tux;game;race;טקס;טאקס;טוקס;משחק;מרוץ;מרוצים;מירוץ;מירוצים;
+Keywords[hr]=tux;igra;utrka
 Keywords[hu]=tux;játék;verseny;
 Keywords[id]=tux;permainan;balapan;
 Keywords[it]=tux;gioco;gara;
@@ -66,9 +71,12 @@ Keywords[pt]=tux;jogo;corrida
 Keywords[pt_BR]=tux;jogo;corrida;
 Keywords[ro]=tux;joc;cursa
 Keywords[ru]=такс;игра;гонка;
+Keywords[sk]=tučniak;hra;závody;
 Keywords[sr]=такс;игра;трка;тукс;игрица;
 Keywords[sv]=tux;spel;tävla;
+Keywords[th]=tux;game;race;
 Keywords[tr]=tux;oyun;yarış;
+Keywords[tt]=tux;game;race;
 Keywords[uk]=пінгвін;гра;перегони;
 Keywords[zh_CN]=企鹅、游戏、赛车
 Keywords[zh_HK]=tux;game;race;
