--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -27,6 +27,7 @@ set(GE_SOURCES
     src/ge_texture.cpp
     src/ge_dx9_texture.cpp
     src/ge_vulkan_2d_renderer.cpp
+    src/ge_vulkan_camera_scene_node.cpp
     src/ge_vulkan_command_loader.cpp
     src/ge_vulkan_driver.cpp
     src/ge_vulkan_dynamic_buffer.cpp
