--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -29,6 +29,7 @@ set(GE_SOURCES
     src/ge_vulkan_2d_renderer.cpp
     src/ge_vulkan_camera_scene_node.cpp
     src/ge_vulkan_command_loader.cpp
+    src/ge_vulkan_depth_texture.cpp
     src/ge_vulkan_driver.cpp
     src/ge_vulkan_dynamic_buffer.cpp
     src/ge_vulkan_features.cpp
