--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -38,6 +38,7 @@ set(GE_SOURCES
     src/ge_vulkan_scene_manager.cpp
     src/ge_vulkan_shader_manager.cpp
     src/ge_vulkan_texture.cpp
+    src/ge_vulkan_texture_descriptor.cpp
     src/ge_gl_texture.cpp
     src/ge_spm.cpp
 )
