--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -23,9 +23,10 @@ endif()
 
 set(GE_SOURCES
     src/gl.c
+    src/ge_culling_tool.cpp
+    src/ge_dx9_texture.cpp
     src/ge_main.cpp
     src/ge_texture.cpp
-    src/ge_dx9_texture.cpp
     src/ge_vma.cpp
     src/ge_vulkan_2d_renderer.cpp
     src/ge_vulkan_animated_mesh_scene_node.cpp
@@ -33,6 +34,7 @@ set(GE_SOURCES
     src/ge_vulkan_command_loader.cpp
     src/ge_vulkan_depth_texture.cpp
     src/ge_vulkan_driver.cpp
+    src/ge_vulkan_draw_call.cpp
     src/ge_vulkan_dynamic_buffer.cpp
     src/ge_vulkan_features.cpp
     src/ge_vulkan_mesh_cache.cpp
