--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -36,6 +36,7 @@ set(GE_SOURCES
     src/ge_vulkan_driver.cpp
     src/ge_vulkan_draw_call.cpp
     src/ge_vulkan_dynamic_buffer.cpp
+    src/ge_vulkan_fbo_texture.cpp
     src/ge_vulkan_features.cpp
     src/ge_vulkan_mesh_cache.cpp
     src/ge_vulkan_mesh_scene_node.cpp
