--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -71,6 +71,7 @@ set(GE_SOURCES
     src/ge_texture.cpp
     src/ge_vma.cpp
     src/ge_vulkan_2d_renderer.cpp
+    src/ge_vulkan_array_texture.cpp
     src/ge_vulkan_animated_mesh_scene_node.cpp
     src/ge_vulkan_camera_scene_node.cpp
     src/ge_vulkan_command_loader.cpp
