Update translation, AppData and Desktop file

--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -22,6 +22,7 @@ GenericName[id]=Sebuah permainan balap kart 3D sumber-terbuka
 GenericName[it]=Un gioco open-source 3D di corse su kart
 GenericName[ja]=オープンソースな3Dレーシングカートゲームです
 GenericName[ko]=3D 오픈소스 카트 경주 게임
+GenericName[mk]=3D open-source тркачка картинг игра
 GenericName[ml]=ഒരു സ്വതന്ത്ര 3D കാർട്ട് റേസിംഗ് ഗെയിം
 GenericName[nl]=Een open source 3D kartracespel
 GenericName[nn]=Eit racerspel i 3D med open kjeldekode
@@ -63,6 +64,7 @@ Keywords[hu]=tux;játék;verseny;
 Keywords[id]=tux;permainan;balapan;
 Keywords[it]=tux;gioco;gara;
 Keywords[ko]=턱스;게임;경주
+Keywords[mk]=тукс;игра;трка;
 Keywords[ml]=ടക്സ്;ഗെയിം;റേസ്;
 Keywords[nl]=tux;game;race;spel;kart;super;auto;parcours;
 Keywords[nn]=tux;spel;billøp;racerspel;
