Build for armv7 windows
No installer as armv7 windows has no x86 emulation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -149,6 +149,8 @@ if (CMAKE_GENERATOR_PLATFORM)
 endif()
 if(arch_lower MATCHES "arm64" OR arch_lower MATCHES "aarch64" OR ${CMAKE_GENERATOR} MATCHES "(ARM64)" OR ${BUILD_ARCH} MATCHES "(ARM64)")
     set(DEPENDENCIES "dependencies-win-aarch64")
+elseif(arch_lower MATCHES "armv7" OR arch_lower MATCHES "armv7" OR ${CMAKE_GENERATOR} MATCHES "(ARM)" OR ${BUILD_ARCH} MATCHES "(ARM)")
+    set(DEPENDENCIES "dependencies-win-armv7")
 elseif(CMAKE_SIZEOF_VOID_P EQUAL 8)
     set(DEPENDENCIES "dependencies-win-x86_64")
 else()
