--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        arch: [i686, x86_64, aarch64]
+        arch: [i686, x86_64, armv7, aarch64]
         os: [windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
     steps:
@@ -31,6 +31,8 @@ jobs:
             echo "cmake_arch=Win32" >> $GITHUB_ENV
           elif [ ${{ matrix.arch }} = "x86_64" ]; then
             echo "cmake_arch=x64" >> $GITHUB_ENV
+          elif [ ${{ matrix.arch }} = "armv7" ]; then
+            echo "cmake_arch=ARM" >> $GITHUB_ENV
           else
             echo "cmake_arch=ARM64" >> $GITHUB_ENV
           fi
@@ -83,8 +85,8 @@ jobs:
           sudo wget https://github.com/supertuxkart/dependencies/releases/download/preview/mxe_static_mingw.zip
           sudo unzip mxe_static_mingw.zip
           sudo rm mxe_static_mingw.zip
-      - name: Install MinGW for aarch64
-        if: ${{ matrix.os == 'ubuntu-latest' && matrix.arch == 'aarch64' }}
+      - name: Install MinGW for armv7 or aarch64
+        if: ${{ matrix.os == 'ubuntu-latest' && ( matrix.arch == 'armv7' || matrix.arch == 'aarch64' ) }}
         run: |
           cd /
           sudo wget https://github.com/mstorsjo/llvm-mingw/releases/download/20210423/llvm-mingw-20210423-msvcrt-ubuntu-18.04-x86_64.tar.xz
@@ -120,17 +122,17 @@ jobs:
           cd build
           cmake .. -G "Visual Studio 17 2022" -DCMAKE_SYSTEM_NAME=Windows -DCMAKE_SYSTEM_PROCESSOR=${{ matrix.arch }} -A ${{ env.cmake_arch }} -DCHECK_ASSETS=OFF
       - name: Configure bulid for MinGW (i686 or x86_64)
-        if: ${{ matrix.os == 'ubuntu-latest' && matrix.arch != 'aarch64' }}
+        if: ${{ matrix.os == 'ubuntu-latest' && matrix.arch != 'armv7' && matrix.arch != 'aarch64' }}
         run: |
           mkdir -p build
           cd build
           cmake .. -DCMAKE_TOOLCHAIN_FILE=../toolchain.cmake -DCMAKE_BUILD_TYPE=RelWithDebInfo -DCHECK_ASSETS=OFF -DUSE_DIRECTX=ON
-      - name: Configure bulid for MinGW (aarch64)
-        if: ${{ matrix.os == 'ubuntu-latest' && matrix.arch == 'aarch64' }}
+      - name: Configure bulid for MinGW (armv7 or aarch64)
+        if: ${{ matrix.os == 'ubuntu-latest' && ( matrix.arch == 'armv7' || matrix.arch == 'aarch64' ) }}
         run: |
           mkdir -p build
           cd build
-          cmake .. -DLLVM_ARCH=aarch64 -DLLVM_PREFIX=/llvm-mingw -DCMAKE_TOOLCHAIN_FILE=../cmake/Toolchain-llvm-mingw.cmake -DCHECK_ASSETS=OFF -DUSE_DIRECTX=ON
+          cmake .. -DLLVM_ARCH=${{ matrix.arch }} -DLLVM_PREFIX=/llvm-mingw -DCMAKE_TOOLCHAIN_FILE=../cmake/Toolchain-llvm-mingw.cmake -DCHECK_ASSETS=OFF -DUSE_DIRECTX=ON
       - name: Build for MSVC
         if: ${{ matrix.os == 'windows-latest' }}
         working-directory: build
@@ -238,11 +240,14 @@ jobs:
           mv tools/run_game.bat SuperTuxKart-${{ env.release_tag }}-win
           mkdir SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-i686
           mkdir SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-x86_64
+          mkdir SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-armv7
           mkdir SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-aarch64
           mv i686 SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-i686/bin
           mv x86_64 SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-x86_64/bin
+          mv armv7 SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-armv7/bin
           mv aarch64 SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-aarch64/bin
           # libwinpthread-1.dll is useless because we statically link
+          rm -f SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-armv7/bin/libwinpthread-1.dll
           rm -f SuperTuxKart-${{ env.release_tag }}-win/stk-code/build-aarch64/bin/libwinpthread-1.dll
       - name: Start packaging STK
         if: ${{ env.release_tag != '' }}
