Update android to target sdk 33

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -11,7 +11,7 @@ buildscript
         // 4.1.2 is the minimum version to support native debug symbols file
         // https://developer.android.com/studio/build/shrink-code#android_gradle_plugin_version_41_or_later
         // 7.0.0 to fix https://stackoverflow.com/questions/68387270/android-studio-error-installed-build-tools-revision-31-0-0-is-corrupted
-        classpath 'com.android.tools.build:gradle:7.0.0'
+        classpath 'com.android.tools.build:gradle:7.3.0'
     }
 }
 
@@ -28,6 +28,8 @@ apply plugin: 'com.android.application'
 
 android
 {
+    // Setting the namespace via a source AndroidManifest.xml's package attribute is deprecated.
+    namespace project.getProperty('package_name')
     // buildToolsVersion is no longer needed https://developer.android.com/studio/releases/gradle-plugin.html#behavior_changes_1
     // Quote:
     // Build Tools 27.0.3 or higher. Keep in mind, you no longer need to specify a version for the build tools using the android.buildToolsVersion property—the plugin uses the minimum required version by default.
@@ -43,6 +45,8 @@ android
 
     defaultConfig
     {
+        versionCode project.getProperty('version_code').toInteger()
+        versionName project.getProperty('version_name')
         minSdkVersion min_sdk_version.toInteger()
         targetSdkVersion target_sdk_version.toInteger()
         externalNativeBuild
