Revert "Check for libshaderc.so (used by debian)"
This reverts commit 292bafcf9a35435e1d2f0acc196625f6234fcaa2.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -263,7 +263,7 @@ if(NOT SERVER_ONLY)
     if (IOS)
         find_library(SHADERC_LIBRARY NAMES shaderc_combined libshaderc_combined)
     else()
-        find_library(SHADERC_LIBRARY NAMES shaderc_shared libshaderc_shared shaderc libshaderc)
+        find_library(SHADERC_LIBRARY NAMES shaderc_shared libshaderc_shared)
     endif()
     find_path(SHADERC_INCLUDEDIR NAMES shaderc/shaderc.hpp PATHS)
     if (NOT SHADERC_LIBRARY OR NOT SHADERC_INCLUDEDIR)
