--- a/data/supertuxkart.desktop
+++ b/data/supertuxkart.desktop
@@ -22,18 +22,21 @@ GenericName[he]=משחק מֵרוצי מכוניות בתלת־ממד ובקוד
 GenericName[hu]=Egy 3D-s, nyílt forráskódú gokartverseny játék
 GenericName[id]=Sebuah permainan balap kart 3D sumber-terbuka
 GenericName[it]=Un gioco open-source 3D di corse su kart
-GenericName[ja]=オープンソースな3Dレーシングカートゲームです
+GenericName[ja]=オープンソースな3Dレーシングカートゲーム
 GenericName[ko]=3D 오픈소스 카트 경주 게임
 GenericName[mk]=3D open-source тркачка картинг игра
 GenericName[ml]=ഒരു സ്വതന്ത്ര 3D കാർട്ട് റേസിംഗ് ഗെയിം
 GenericName[nl]=Een open source 3D kartracespel
 GenericName[nn]=Eit racerspel i 3D med open kjeldekode
+GenericName[oc]=Un jòc de corsa de kart liure en 3D
 GenericName[pl]=Trójwymiarowe wyścigi gokartów open-source
 GenericName[pt]=Um jogo 3D de karting com mascotes de aplicativos open source.
 GenericName[pt_BR]=Corridas de kart em 3D e código aberto
-GenericName[ru]=Свободная трёхмерная гоночная игра на картах
+GenericName[ro]=Un joc de curse 3D open-source
+GenericName[ru]=Свободная трёхмерная гоночная игра на машинках
 GenericName[rue]=3х-мірна возикова перебігова бавка
 GenericName[sk]=3D open-source závodná hra v štýle arkády
+GenericName[sl]=3D odprtokodna dirkalna igra
 GenericName[sr]=Игра тркања колицима слободног кода
 GenericName[sv]=Ett 3D-racingspel med öppen källkod
 GenericName[th]=เกมแข่งรถโอเพ่นซอร์ส 3 มิติ
@@ -68,11 +71,13 @@ Keywords[hr]=tux;igra;utrka
 Keywords[hu]=tux;játék;verseny;
 Keywords[id]=tux;permainan;balapan;
 Keywords[it]=tux;gioco;gara;
+Keywords[ja]=tux;game;race;
 Keywords[ko]=턱스;게임;경주
 Keywords[mk]=тукс;игра;трка;
 Keywords[ml]=ടക്സ്;ഗെയിം;റേസ്;
 Keywords[nl]=tux;game;race;spel;kart;super;auto;parcours;
 Keywords[nn]=tux;spel;billøp;racerspel;
+Keywords[oc]=tux;game;race;corsa;jòc;
 Keywords[pl]=tux;gra;wyścigi;
 Keywords[pt]=tux;jogo;corrida
 Keywords[pt_BR]=tux;jogo;corrida;
@@ -80,6 +85,7 @@ Keywords[ro]=tux;joc;cursa
 Keywords[ru]=такс;игра;гонка;
 Keywords[rue]=tux;бавка;гонитва;
 Keywords[sk]=tučniak;hra;závody;
+Keywords[sl]=tuks;igra;dirka;
 Keywords[sr]=такс;игра;трка;тукс;игрица;
 Keywords[sv]=tux;spel;tävla;
 Keywords[th]=tux;game;race;
