Update for the latest MoltenVK and astcenc

--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -27,7 +27,7 @@ if (LIBASTCENC_LIBRARY AND LIBASTCENC_INCLUDEDIR)
     endif()
     unset(CMAKE_REQUIRED_INCLUDES)
     unset(CMAKE_REQUIRED_LIBRARIES)
-    if (ASTCENC_DLL)
+    if (ASTCENC_DLL AND NOT IOS)
         message(STATUS "libastcenc: -DASTCENC_DYNAMIC_LIBRARY required")
         add_definitions(-DASTCENC_DYNAMIC_LIBRARY)
     endif()
