--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -534,6 +534,8 @@ else()
     endif()
 endif()
 
+SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--subsystem,console")
+
 
 if(WIN32)
     configure_file("${STK_SOURCE_DIR}/../tools/windows_installer/icon_rc.template" "${PROJECT_BINARY_DIR}/tmp/icon.rc")
@@ -785,6 +787,8 @@ if(UNIX AND NOT APPLE)
         target_link_libraries(supertuxkart "-fsanitize=thread")
     endif()
 endif()
+
+target_link_libraries(supertuxkart "-fsanitize=undefined")
 
 if(BUILD_RECORDER)
     target_link_libraries(supertuxkart ${OPENGLRECORDER_LIBRARY})
