--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -67,6 +67,7 @@ set(GE_SOURCES
     src/ge_compressor_bptc_bc7.cpp
     src/ge_compressor_s3tc_bc3.cpp
     src/ge_culling_tool.cpp
+    src/ge_dx9_texture.cpp
     src/ge_main.cpp
     src/ge_texture.cpp
     src/ge_vma.cpp
