--- a/lib/graphics_engine/CMakeLists.txt
+++ b/lib/graphics_engine/CMakeLists.txt
@@ -42,10 +42,12 @@ include_directories("${PROJECT_SOURCE_DIR}/lib/graphics_utils")
 include_directories("${PROJECT_SOURCE_DIR}/lib/irrlicht/include")
 include_directories("${PROJECT_SOURCE_DIR}/lib/bullet/src")
 find_path(SDL2_INCLUDEDIR NAMES SDL.h PATH_SUFFIXES SDL2 include/SDL2 include PATHS)
-if (NOT SDL2_INCLUDEDIR)
-    message(FATAL_ERROR "SDL2 not found.")
-else()
-    include_directories("${SDL2_INCLUDEDIR}")
+if (NOT EMSCRIPTEN)
+    if (NOT SDL2_INCLUDEDIR)
+        message(FATAL_ERROR "SDL2 not found.")
+    else()
+        include_directories("${SDL2_INCLUDEDIR}")
+    endif()
 endif()
 
 if(APPLE AND NOT DLOPEN_MOLTENVK)
